Adds investment time description

--- a/development/fulfillment/utilization/index.html.md.erb
+++ b/development/fulfillment/utilization/index.html.md.erb
@@ -408,7 +408,7 @@ Each month, we conduct an architecture review.
 
 The review process targets reviews from both a current and future design perspective.
 That is, the group decides if the component under review should be done in a particular way.
-This is not necessarily "should a thing be done," but it could be for if we need to propose
+This is not necessarily "should a thing be done," but it could be used that way. It can also be used to propose
 a large architectural change that might have wide sweeping changes or as a prelude to
 the construction of a blueprint in our [evolution workflow](/handbook/engineering/architecture/workflow/)
 process.
@@ -453,6 +453,23 @@ we have used for our retrospectives and working groups.
 5. The artifacts of the review (recording, issues, etc) are published and made available to others in the `/doc` directory of the [CustomersDot project](https://gitlab.com/gitlab-org/customers-gitlab-com)
 6. Consider updating this timeline with any new learnings or propose adjustments to the [issue template](https://gitlab.com/fulfillment-group/utilization-group/team-project/-/blob/main/.gitlab/issue_templates/architecture_review.md) if applicable.
 7. The review issue is closed
+
+### Investment Time
+
+The time required to prepare, discuss, and complete a review is variable.
+We should not spend all of our time on the review. We should approach the review
+pragmatically with a focus on understanding the problem, the value proposition,
+and definition of success. By meeting on a 30 day cycle, we can spread
+out the investment required over time.
+
+We should time box the preparation of the review, and we should reconsider
+or reduce the review scope if the topic is too broad, has too many
+hidden dependencies, or becomes unwieldy in some other way.
+
+Team collaboration is important to the success of the review. The Reviewer should
+ask for input, feedback, and receive help from other team members by opening
+a discussion thread in the review issue. The role is not meant to be solitary, but
+a typical DRI.
 
 ## Performance Indicators
 
