Add Child pages to QE page

--- a/quality/index.html.md.erb
+++ b/quality/index.html.md.erb
@@ -38,7 +38,7 @@ description: >-
 #### [Triage Operations](/handbook/engineering/quality/triage-operations/)
 {:.no_toc}
 
-#### [E2E Test Execution Metrics](/handbook/engineering/quality/quality-engineering/test-metrics-dashboards/)
+#### [Quality Engineering Sub-department](/handbook/engineering/quality/quality-engineering/)
 {:.no_toc}
 
 ## Mission
