--- a/quality/quality-engineering/index.html.md.erb
+++ b/quality/quality-engineering/index.html.md.erb
@@ -13,6 +13,24 @@ description: "quality Engineering Sub-Department"
 
 {::options parse_block_html="true" /}
 
+### Child Pages
+{:.no_toc}
+
+#### [Bug Prioritization](/handbook/engineering/quality/quality-engineering/bug-prioritization/)
+{:.no_toc}
+
+#### [Quad Planning](/handbook/engineering/quality/quality-engineering/quad-planning/)
+{:.no_toc}
+
+#### [On-call Rotation](/handbook/engineering/quality/quality-engineering/oncall-rotation/)
+{:.no_toc}
+
+#### [Test Coverage](/handbook/engineering/quality/quality-engineering/test-coverage/)
+{:.no_toc}
+
+#### [E2E Test Execution Metrics](/handbook/engineering/quality/quality-engineering/test-metrics-dashboards/)
+{:.no_toc}
+
 - - -
 
 ## FY23 Direction
