--- a/security/index.html.md.erb
+++ b/security/index.html.md.erb
@@ -489,6 +489,8 @@ first.
 
 Starting with version 8, 1Password can operate as the single source of truth for your SSH keys. This includes generating private keys, storing them securely, filling your public keys in to sites like GitLab.com, and unlocking the keys automatically when performing git operations.
 
+Once you've migrated your key pairs into 1Password and you are using the 1Password SSH agent, storing the private keys in your `~/.ssh` directory isn't necessary anymore. They can be deleted from there.
+
 More information is available [in the official documentation](https://developer.1password.com/docs/ssh/) and see the [blog post](https://blog.1password.com/1password-ssh-agent/) from 1Password.
 
 #### CLI integration
