--- a/business-technology/data-team/data-catalog/xmau-analysis/product-manager-toolkit.html.md.erb
+++ b/business-technology/data-team/data-catalog/xmau-analysis/product-manager-toolkit.html.md.erb
@@ -15,7 +15,7 @@ title: Product Manager Toolkit
 {:.no_toc}
 
 As a Product Manager, you constantly have data-related questions. You want to know how your 
-feature is performing, who your top users are, how many self-managed installations have 
+feature is performing, who your top users are, how many Self Managed installations have 
 adopted a specific feature, etc. Plus, you potentially want all of these metrics broken out 
 by product tier, paid vs free, edition, etc.
 
@@ -42,10 +42,10 @@ to gather feedback. Please add any feedback on this page and the snippets provid
 
 The snippets listed below will allow you to:
 
-- create a visualization with estimated Self-Managed uplift for a Service Ping metric (either 
+- create a visualization with estimated Self Managed uplift for a Service Ping metric (either 
 an xMAU metric or other PI) (`[td_xmau]`)
-- get a monthly count of instances using one of your features (`[td_xmau_metrics_instance_count]`)
-- get a instance adoption rate of your feature (`[td_xmau_metrics_instance_adoption]`)
+- get a monthly count of installations using one of your features (`[td_xmau_metrics_instance_count]`)
+- get a installation adoption rate of your feature (`[td_xmau_metrics_instance_adoption]`)
 - get a list of your Top Users, Top Growing Users, or Churning Users (`[td_xmau_metrics_top_users]`, 
 `[td_xmau_metrics_increasing_usage_users]`, `[td_xmau_metrics_decreasing_usage_users]`)
 - gain more insights into a drop or an increase of your feature usage (`[td_xmau_monthly_change_breakdown]`)
@@ -72,7 +72,7 @@ snippet (discussed below).
 
 This snippet will allow you to:
 
-* [Create a standard xMAU chart](https://app.periscopedata.com/app/gitlab/793297/xMAU-Analysis-Workflow---Example-Queries-and-Visualisations?widget=10690032&udv=0) 
+* [Create a standard xMAU/PI chart](https://app.periscopedata.com/app/gitlab/793297/xMAU-Analysis-Workflow---Example-Queries-and-Visualisations?widget=10690032&udv=0) 
 (what is embedded in the handbook)
 * [Break down estimated xMAU by edition](https://app.periscopedata.com/app/gitlab/793297/xMAU-Analysis-Workflow---Example-Queries-and-Visualisations)
 * [Break down estimated xMAU by product tier](https://app.periscopedata.com/app/gitlab/793297/xMAU-Analysis-Workflow---Example-Queries-and-Visualisations?widget=10690026&udv=0)
@@ -98,7 +98,7 @@ type. Section, stage, and group names should be lowercase with underscores in th
   * 'PI' --> 'metrics_path' 
 1. **target**: the target to draw for this metric 
     * If you set a target value in the performance indicator yaml file ([as described below](#how-to-show-dynamic-targets-from-pi-yaml-files)), 
-    then that value will be used (you can enter any number here)
+    then that value will be used
     * If you provide a number between 0 and 1, the target will increase MoM by that percentage. 
       * Ex: 0 will yield a target that equal to the previous month's total (0% change MoM)
       * Ex: 0.1 will yield a target that is a 10% increase from the previous month's total
@@ -139,9 +139,8 @@ The `[td_xmau_metrics_recorded_metric_value]` snippet requires 1 parameter: `met
 1. **metrics_path:** the Service Ping metric of interest
   * You can find the metrics_path value in the [Service Ping metrics dictionary](https://metrics.gitlab.com/)
    
-You can add a target value to the chart by adding a `target_name` and a 
-`monthly_estimated_targets` key to the performance indicator yaml [as described below](#how-to-show-dynamic-targets-from-pi-yaml-files).
-
+You can add a target value to the chart by adding a `monthly_estimated_targets` key to the 
+performance indicator yaml [as described below](#how-to-show-dynamic-targets-from-pi-yaml-files). 
 If a target value is not provided in the performance indicator yaml file, a target will not 
 appear on the chart.
 
@@ -163,6 +162,11 @@ The `[td_xmau_metrics_recorded_metric_value_with_total]` snippet requires 1 para
 1. **metrics_path:** the Service Ping metric of interest
   * You can find the metrics_path value in the [Service Ping metrics dictionary](https://metrics.gitlab.com/)
 
+You can add a target value to the chart by adding a `monthly_estimated_targets` key to the 
+performance indicator yaml [as described below](#how-to-show-dynamic-targets-from-pi-yaml-files). 
+If a target value is not provided in the performance indicator yaml file, a target will not 
+appear on the chart.
+
 **Example**
 
 * [td_xmau_metrics_recorded_metric_value_with_total: Metric Value split by edition](https://app.periscopedata.com/app/gitlab/793297/xMAU-Analysis-Workflow---Example-Queries-and-Visualisations?widget=14866036&udv=0): 
@@ -183,6 +187,11 @@ The `[td_xmau_metrics_original_metric_value_with_total]` snippet requires 1 para
 
 1. **metrics_path:** the Service Ping metric of interest
   * You can find the metrics_path value in the [Service Ping metrics dictionary](https://metrics.gitlab.com/)
+
+You can add a target value to the chart by adding a `monthly_estimated_targets` key to the 
+performance indicator yaml [as described below](#how-to-show-dynamic-targets-from-pi-yaml-files). 
+If a target value is not provided in the performance indicator yaml file, a target will not 
+appear on the chart.
 
 #### Recorded weekly metric value
 
@@ -227,11 +236,11 @@ The `[td_xmau_metrics_weekly_recorded_metric_value_with_total]` snippet requires
 * [td_xmau_metrics_weekly_recorded_metric_value_with_total: Metric Value split by edition](https://app.periscopedata.com/app/gitlab/793297/xMAU-Analysis-Workflow---Example-Queries-and-Visualisations?widget=15240714&udv=0): 
 `[td_xmau_metrics_weekly_recorded_metric_value_with_total('redis_hll_counters.user_packages.i_package_npm_user_weekly')]`
 
-#### Monthly active instance count
+#### Monthly active installation count
 
 `[td_xmau_metrics_instance_count(metrics_path)]`
 
-The snippet `[td_xmau_metrics_instance_count]` shows you how many instances have used your 
+The snippet `[td_xmau_metrics_instance_count]` shows you how many installations have used your 
 feature (returned a `metric_value > 0`) in a given month. This snippet does not include any 
 estimations, just recorded data. The count is broken out by:
 
@@ -248,14 +257,14 @@ The `[td_xmau_metrics_instance_count]` snippet requires 1 parameter: `metrics_pa
 
 **Example**
 
-* [Number of Instances using CI Pipelines by Edition](https://app.periscopedata.com/app/gitlab/793297/xMAU-Analysis-Workflow---Example-Queries-and-Visualisations?widget=10755606&udv=0): `[td_xmau_metrics_instance_count('usage_activity_by_stage_monthly.verify.ci_pipelines')]`
+* [Number of Installations using CI Pipelines by Edition](https://app.periscopedata.com/app/gitlab/793297/xMAU-Analysis-Workflow---Example-Queries-and-Visualisations?widget=10755606&udv=0): `[td_xmau_metrics_instance_count('usage_activity_by_stage_monthly.verify.ci_pipelines')]`
 
-#### Monthly metric instance adoption
+#### Monthly metric installation adoption
 
 `[td_xmau_metrics_instance_adoption(breakdown, metrics_path)]`
 
-The snippet `[td_xmau_metrics_instance_adoption]` can be used to find out instance-level 
-adoption of your features. It provides you the count and share of instances reporting 
+The snippet `[td_xmau_metrics_instance_adoption]` can be used to find out installation-level 
+adoption of your features. It provides you the count and share of installations reporting 
 `metric_value > 0` for a specific Service Ping metric. It is effectively the same as the 
 `td_xmau_metrics_instance_count` snippet, but it allows you to specify how you group the data.
 This snippet does not include any estimations, just recorded data. 
@@ -292,10 +301,10 @@ growth/decrease of a specific monthly metric value by breaking usage into 4 buck
 users opening an issue)
 1. Increased Usage: Comparing Month M with M-1, higher usage of a feature (for example, more 
 users opening an issue)
-1. New tracked instance: We haven't seen this instance reporting this feature counter before. 
-That means either it is a new instance, or it just upgraded from an older version that did not 
+1. New tracked installations: We have not seen this installation reporting this feature counter before. 
+That means either it is a new installation, or it just upgraded from an older version that did not 
 have the counter
-1. No data received: An instance stopped reporting (it could be because of expiring 
+1. No data received: An installation stopped reporting (it could be because of expiring 
 subscription, churn, or disabling of Service Ping)
 
 This snippet does not include any estimations, just recorded data. 
@@ -316,11 +325,11 @@ The `[td_xmau_monthly_change_breakdown]` snippet requires 1 parameter: `metrics_
 The following snippets return usage from a fixed point in time (ex: last month). The data is 
 _not_ trended and is intended to allow PMs to dig deeper into movement in a specific metric.
 
-#### Top 50 instances last month
+#### Top 50 installations last month
 
 `[td_xmau_metrics_top_users(metrics_path)]`
 
-The `[td_xmau_metrics_top_users]` snippet returns a list of the Top 50 Self-Managed instances 
+The `[td_xmau_metrics_top_users]` snippet returns a list of the Top 50 Self-Managed installations 
 using your specific feature last month. 
 
 **Usage**
@@ -334,11 +343,11 @@ The `[td_xmau_metrics_top_users]` snippet requires 1 parameter: `metrics_path`.
 
 * [Top 50 Users - MAU triggering deployments](https://app.periscopedata.com/app/gitlab/793297/xMAU-Analysis-Workflow---Example-Queries-and-Visualisations?widget=10768540&udv=0): `[td_xmau_metrics_top_users('usage_activity_by_stage_monthly.release.deployments')]`
 
-#### Instances with biggest MOM usage increase
+#### Installations with biggest MOM usage increase
 
 `[td_xmau_metrics_increasing_usage_users(metrics_path)]`
 
-The snippet renders a list of Top 50 Self-Managed Instances who have seen their monthly usage grow 
+The snippet renders a list of Top 50 Self-Managed Installations who have seen their monthly usage grow 
 the most in the last completed month.
 
 **Usage**
@@ -352,12 +361,12 @@ The `[td_xmau_metrics_increasing_usage_users]` snippet requires 1 parameter: `me
 
 * [Top 50 Users with increasing usage - MAU triggering deployments](https://app.periscopedata.com/app/gitlab/793297/xMAU-Analysis-Workflow---Example-Queries-and-Visualisations?widget=10741403&udv=0): `[td_xmau_metrics_increasing_usage_users('usage_activity_by_stage_monthly.release.deployments')]`
 
-#### Instances with biggest MOM usage decrease
+#### Installations with biggest MOM usage decrease
 
 `[td_xmau_metrics_decreasing_usage_users(metrics_path)]`
 
 The `[td_xmau_metrics_decreasing_usage_users]` snippet returns a list of Top 50 Self-Managed 
-instances who have seen their monthly usage decrease the most in the last completed month. 
+installations who have seen their monthly usage decrease the most in the last completed month. 
 
 **Usage**
 
@@ -374,10 +383,6 @@ The `[td_xmau_metrics_decreasing_usage_users]` snippet requires 1 parameter: `me
 
 #### How to show dynamic targets from PI yaml files
 
-This functionality is currently broken. Please follow [this issue](https://gitlab.com/gitlab-data/product-analytics/-/issues/755) 
-for updates on the fix.
-{: .alert .alert-warning}
-
 The following snippets support adding dynamic target values from performance indicator yaml files:
 
 * `td_xmau`
@@ -387,33 +392,41 @@ The following snippets support adding dynamic target values from performance ind
 
 **Usage**
 
-Adding the `target_name`, `monthly_recorded_targets`, `monthly_estimated_targets` keys to a 
-performance indicator yaml file, shows the provided target values for the provided metric name.
+Add the `metric_name` and `monthly_estimated_targets` keys to a 
+performance indicator yaml file.
 
-* `target_name`: The target name should equal to the `metrics_path` used in the snippet
+* `metric_name`: The name should equal to the `metrics_path` used in the snippet
 * `monthly_estimated_targets`: is a list of `"key": value` pairs where `key` is the target date 
-to reach the target `value`
-* `monthly_recorded_targets`: is a list of `"key": value` pairs where `key` is the target date 
 to reach the target `value`
 
 **Example**
 
-Having the following code snippet in a performance indicator yaml:
+Imagine the following was included in a PI yaml file
 
 ```yaml
 ...
 - name: Configure:Configure - SMAU, GMAU - MAU of GitLab Managed Terraform State
-  target_name: counts.projects_with_terraform_states
-  monthly_recorded_targets:
-    "2021-04-20": 5000
-    "2020-11-01": 3000
-    "2020-07-01": 700
+  metric_name: redis_hll_counters.terraform.p_terraform_state_api_unique_users_monthly
   monthly_estimated_targets:
-    "2021-04-20": 6000
-    "2020-11-01": 3000
-    "2020-07-01": 700
+    "2023-01-30": 5000
+    "2022-10-30": 4000
+    "2022-07-30": 2000
 ...
 ```
+
+That would produce the following targets
+
+| reporting_month | target_value |
+| --- | --- |
+| All previous months | 2000 |
+| 2022-06-01 | 2000 |
+| 2022-07-01 | 2000 |
+| 2022-08-01 | 4000 |
+| 2022-09-01 | 4000 |
+| 2022-10-01 | 4000 |
+| 2022-11-01 | 5000 |
+| 2022-12-01 | 5000 |
+| 2023-01-01 | 5000 |
 
 #### Forecasted xMAU
 
@@ -422,7 +435,7 @@ You can leverage the `[td_xmau]` snippet to forecast your PI growth over time. C
 
 * Edit the chart in SiSense.
 * Below the query, expand the dropdown next to Python 3.7 and select `Predictive Forecast Plot`. 
-* Next you'll need to edit the snippet to update the names of a couple of fields. You can 
+* Next you will need to edit the snippet to update the names of a couple of fields. You can 
 reference the [query used in this chart to forecast Package stage GMAU](https://app.periscopedata.com/app/gitlab/805350/Package:-User-Adoption-and-Growth?widget=12924753&udv=0) 
 (also displayed below)
 * Now you are ready to click `Run SQL`
@@ -461,20 +474,20 @@ The snippet called `feature_usage_this_agg_period_and_growth(feature)` ([SQL sou
 - feature_name: name of the pings you want to track. To get the exact name of the pings, please refer to [this model](https://dbt.gitlabdata.com/#!/model/model.gitlab_snowflake.version_usage_data_unpacked).
 - feature_usage_sum: Total count for the specific feature.
 - feature_usage_sum_change: count for the specific feature at a give period P.
-- instance_count: Total count of instances that have been using this specific feature at least once before a given period P. In technical terms, it counts all instances which have a `feature_usage_sum` greater than 0 for this period.
-- instance_count_change: count of instances that have been using this specific feature at a given period P. In technical terms, it counts all instances which have a `feature_usage_sum_change` greater than 0 for this period.
+- instance_count: Total count of installations that have been using this specific feature at least once before a given period P. In technical terms, it counts all installations which have a `feature_usage_sum` greater than 0 for this period.
+- instance_count_change: count of installations that have been using this specific feature at a given period P. In technical terms, it counts all installations which have a `feature_usage_sum_change` greater than 0 for this period.
 - average_per_12: average `feature_usage_sum` value over the previous 12 months.
 - percent_growth:  POP growth.
 
 This snippet can be used with the date-range and aggregation filters. It has been used in several dashboards, one of them is the [Secure Metrics dashboard](https://app.periscopedata.com/app/gitlab/410654/Secure-Metrics)
 
-We are planning to build a second snippet to report on the adoption rate per [product tier](/handbook/marketing/brand-and-product-marketing/product-and-solution-marketing/tiers/). This snippet will allow to easily calculate among the instances that send us service pings in a given period, the number of instances that use a specific feature.
+We are planning to build a second snippet to report on the adoption rate per [product tier](/handbook/marketing/brand-and-product-marketing/product-and-solution-marketing/tiers/). This snippet will allow to easily calculate among the installations that send us service pings in a given period, the number of installations that use a specific feature.
 
 ###### Examples
 
-- **Example 1**: [What percent of self-managed instances sending service pings have a project with an active Jira integration?](https://app.periscopedata.com/app/gitlab/602123/Data-For-Product-Manager:-Supporting-doc?widget=7886001)
-- **Example 2**: [What are the salesforce accounts of the 100 instances that use issues the most?](https://app.periscopedata.com/app/gitlab/602123/Data-For-Product-Managers:-Supporting-Doc?widget=7932958)
-- **Example 3**: [How many SAST jobs have been created in the last 12 months by self-managed instances sending service pings ?](https://app.periscopedata.com/app/gitlab/602123/Data-For-Product-Manager:-Supporting-doc?widget=7886026)
+- **Example 1**: [What percent of self-managed installations sending service pings have a project with an active Jira integration?](https://app.periscopedata.com/app/gitlab/602123/Data-For-Product-Manager:-Supporting-doc?widget=7886001)
+- **Example 2**: [What are the salesforce accounts of the 100 installations that use issues the most?](https://app.periscopedata.com/app/gitlab/602123/Data-For-Product-Managers:-Supporting-Doc?widget=7932958)
+- **Example 3**: [How many SAST jobs have been created in the last 12 months by self-managed installations sending service pings ?](https://app.periscopedata.com/app/gitlab/602123/Data-For-Product-Manager:-Supporting-doc?widget=7886026)
 
 ##### usage_ping_metric_count Snippet
 
