Support Career Framework pages - fixing typos and clarifying deep dive

--- a/career-development/matrix/engineering/support/staff/_support_staff_leadership_competency.erb
+++ b/career-development/matrix/engineering/support/staff/_support_staff_leadership_competency.erb
@@ -1,3 +1,3 @@
 * Works frequently with other teams to resolve difficult issues
 * Anticipates and plans for future issues that will impact Support
-* Participates on Working Groups as the need arises
+* Participates in Working Groups as the need arises
