--- a/career-development/matrix/engineering/support/senior/_support_senior_technical_competency.erb
+++ b/career-development/matrix/engineering/support/senior/_support_senior_technical_competency.erb
@@ -1,7 +1,7 @@
 * Able and willing to debug and resolve complex problems
-* Notices and escalates and emerging issues
+* Notices and escalates emerging issues
 * Becomes involved with issues that are likely to breach 
-  due to their complexity.
+  due to their complexity
 * Contributes improvements to documentation
 * Fixes customer-impacting bugs
 * Strong understanding of GitLab's architecture
