--- a/career-development/matrix/engineering/support/staff/_support_staff_technical_competency.erb
+++ b/career-development/matrix/engineering/support/staff/_support_staff_technical_competency.erb
@@ -1,3 +1,3 @@
-* Able dig into the GitLab codebase and determine the root cause of complex problems
-* Frequenty submits fixes for customer-impacting issues
+* Able to dig into the GitLab codebase and determine the root cause of complex problems
+* Frequently submits fixes for customer-impacting issues
 * Creates tooling to improve the efficacy of GitLab Support
