Add clean room dev process to Monitor Observability

--- a/development/ops/monitor/observability/index.html.md.erb
+++ b/development/ops/monitor/observability/index.html.md.erb
@@ -70,6 +70,10 @@ If you are ever looking for additional issues to work on:
 1. Once you are done with the issue, make sure any relevant MRs are linked and close the issue.
 1. Repeat.
 
+### Clean Room Development Process
+
+For some projects, we require a [cleanroom development process](https://en.wikipedia.org/wiki/Cleanroom_software_engineering). Our process is [described here](https://docs.google.com/document/d/1anexib2NBC57Kpv1GTkxFrozuEs4s9c8_MWkOE8GAnc/edit).
+
 ## Team members
 
 <%= direct_team(manager_role: 'Engineering Manager, Monitor:Observability') %>
