--- a/infrastructure/team/stable-counterpart.html.md.erb
+++ b/infrastructure/team/stable-counterpart.html.md.erb
@@ -79,6 +79,24 @@ You've been assigned to be a Stable Counterpart DRI for a service, great!  Now w
  4. For each goal identified, add a sub epic or issues to the main `stable-counterpart` epic.
  5. Schedule a weekly sync with both counterparts using the [agenda template](#-stable-counterpart-weekly-sync-agenda-template).
 
+## Project work VS Operations Work
+
+Each stable counterpart should strive for a 50% split between project work
+(`~work::project`) and operations work (~work::incident + ~work::general).
+Having more than 50% operations work is an indicator that the service/team is
+not in a healthy state and is something that needs to be addressed. More detail
+on this can be found in <https://sre.google/workbook/part-II-practices/>
+
+### Gitaly
+
+<% if ENV['PERISCOPE_EMBED_API_KEY'] %>
+  <div>
+    <embed width="100%" height="100%" style="min-height:300px;" src="<%= signed_periscope_url({ chart: 15996542,dashboard: 1019503 , embed: "v2"}) %>">
+  </div>
+  <% else %>
+    <p>You must set a <code>PERISCOPE_EMBED_API_KEY</code> environment variable to render this chart.</p>
+<% end %>
+
 # Resources
 ## Stable Counterpart Weekly Sync Agenda Template
 
