Fix broken links from displaying

--- a/development/principles/index.html.md.erb
+++ b/development/principles/index.html.md.erb
@@ -212,8 +212,8 @@ If a GitLab UI component is not available on HAML due to its intrinsic complexit
 
 A complex component denotes a type of component that cannot be used easily in our HAML files. This might be due to in-built state management, CSS or dynamic behaviour that rapidly becomes a maintainability burden inside HAML. An example of such a component would be our [Table component](https://gitlab-org.gitlab.io/gitlab-ui/?path=/docs/base-table-table--default).
 
-[backend]:https://docs.gitlab.com/ee/development/api_graphql_styleguide.html
-[frontend]: https://docs.gitlab.com/ee/development/fe_guide/graphql.html
-[use GraphQL everywhere]: https://gitlab.com/groups/gitlab-org/-/epics/1366
-[the importance of velocity]: #the-importance-of-velocity
-[engineering proposed initiative]: #engineering-proposed-initiatives
+* [backend](https://docs.gitlab.com/ee/development/api_graphql_styleguide.html)
+* [frontend](https://docs.gitlab.com/ee/development/fe_guide/graphql.html)
+* [use GraphQL everywhere](https://gitlab.com/groups/gitlab-org/-/epics/1366)
+* [the importance of velocity](/handbook/engineering/development/principles/#the-importance-of-velocity)
+* [engineering proposed initiative](/handbook/engineering/#engineering-proposed-initiatives)
