clarify purpose of drafting issue

--- a/product/product-okrs/index.html.md.erb
+++ b/product/product-okrs/index.html.md.erb
@@ -31,7 +31,7 @@ This page provides an overview of the Product Division OKR workflow. All departm
 
 - **8 weeks** prior to the start of the  quarter, an [automated drafting issue](https://gitlab.com/gitlab-com/Product/-/blob/main/.gitlab/issue_templates/Product-Division-OKR-Drafting.md) kicks off the OKR drafting process: 
      - Product Operations updates the issue with known Objectives, due dates and any other details needed
-     - Product Operations signals the Chief Product Officer and the team the drafting issue is available 
+     - Product Operations signals the Chief Product Officer and the Product team the drafting issue is available for contributions/ideation
 - **6 weeks** prior to the start of the quarter: 
      - CEO and Chief of Staff to the CEO initiate the OKR process. See [CEO initiates new quarter's OKRs](https://about.gitlab.com/company/okrs/#ceo-initiates-new-quarters-okrs)
      - CProdO shares proposed Product Division OKRs aligned to the [annual product investment themes](https://about.gitlab.com/direction/#fy23-product-investment-themes) and annual CEO Objectives leveraging the [drafting issue](https://gitlab.com/gitlab-com/Product/-/blob/main/.gitlab/issue_templates/Product-Division-OKR-Drafting.md) and pings the Product Leadership Team for review and feedback
