Add Pricing Role to the Pricing Model Contributor Section

--- a/pricing/index.html.md.erb
+++ b/pricing/index.html.md.erb
@@ -16,6 +16,7 @@ GitLab's pricing strategy is set by the CEO, Sid Sibrandij. Everyone can contrib
 Contributions are part of the day-to-day jobs of the following people:
 - Senior Director, Pricing (Keith Chung)
 - Principal Pricing Manager (Lisa Hoang)
+- Principal Pricing Manager (Sean Hall)
 - Sr. Pricing Analyst (Ishita Sharan)
 - Product Marketing (Saumya Upadhyaya)
 
