Cleanse job families redirects.yml

--- a/product/product-leadership/index.html.md.erb
+++ b/product/product-leadership/index.html.md.erb
@@ -19,8 +19,7 @@ The GitLab Product team includes team members at various levels of [Product Mana
 | Level | Job Families | Hierarchy Scopes |
 | ----- | ------------ | ---------------- |
 | IC | [Product Manager](/job-families/product/product-manager/) | Group, Stage |
-| Manager | [Group Manager Product](/job-families/product/product-management-leadership/#group-manager-product-gmp), [Director of Product](/job-families/product/director-of-product/) | Collection of Groups, Stage, Section |
-| Director | [Director of Product](/job-families/product/director-of-product/) | Section |
+| Manager | [Group Manager Product](/job-families/product/product-management-leadership/#group-manager-product-gmp), [Director of Product](/job-families/product/product-management-leadership/) | Section |
 | Senior Leader | [VP](/job-families/product/product-management-leadership/#vp-of-product) | All Sections |
 | Executive | [VP, Product](/job-families/product/vp-product/) | Entire Function |
 
@@ -111,7 +110,7 @@ expectations the leader should have in working with PMs, but is not intended
 to be hard and fast rules that take the place of having a strong working relationship
 and prioritizing things effectively together.
 
-**Note** - This is intended as a supplement to the [product director](/job-families/product/director-of-product/) or [group manager of product](/job-families/product/product-management-leadership/#group-manager-product-gmp)
+**Note** - This is intended as a supplement to the [product director](job-families/product/product-management-leadership/) or [group manager of product](/job-families/product/product-management-leadership/#group-manager-product-gmp)
 job descriptions with specific focus on the interaction between PMs and their managers.
 General job responsibilities can be found at that link.
 
