Adapt mentions of single team

--- a/infrastructure/team/gitlab-dedicated/index.html.md.erb
+++ b/infrastructure/team/gitlab-dedicated/index.html.md.erb
@@ -19,7 +19,7 @@ The GitLab Dedicated team mission is to create a fully managed, single-tenant Gi
 
 ## Vision
 
-The GitLab Dedicated team is a customer facing team, with team members focused on a high level of infrastructure automation, and enabling customer interactions with the GitLab Dedicated platform.
+The GitLab Dedicated group is a customer facing team, with team members focused on a high level of infrastructure automation, and enabling customer interactions with the GitLab Dedicated platform.
 
 Team mission is to:
 
@@ -92,7 +92,7 @@ The team does have a set of regular synchronous calls:
 
 * `Demo call` - This call is on the agenda once per week. During this call, team members show off their progress, and engage with other team members on topics related to GitLab Dedicated platform. Demo calls are supposed to be rough around the edges and unpolished. In fact, if the demo looks polished, we will discuss whether we are being ambitious enough with our goals
 * `Team call` - During this call, we are sharing important information for team-members day-to-day, as well as project items requiring a sync discussion
-* 1-1s between the Individual Contributors and Engineering Manager
+* 1-1s between the Individual Contributors and Engineering Managers
 
 Impromptu Zoom meetings for discussing GitLab Dedicated work between individuals are created as needed.
 It is expected that these meetings are private streamed, or recorded(1*), and then uploaded to [GitLab Unfiltered playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0KqC5FfUVPyndvLvTWifWbfB).
