Acknowledge multiple teams and their own channels of communication

--- a/infrastructure/team/gitlab-dedicated/index.html.md.erb
+++ b/infrastructure/team/gitlab-dedicated/index.html.md.erb
@@ -35,21 +35,25 @@ Team performance indicators are not fully defined. We are going to consider a **
 ## Team Members
 
 
-Engineering team members of GitLab Dedicated are publicly referenced with specialty for `Environment Automation`, due to team being formed while the product was not public.
+Engineering team members of GitLab Dedicated are publicly referenced with specialty for `Environment Automation`, `Switchboard` or `US Public Sector Services` team, based on their primary task.
 
 <%= direct_team(manager_slug: 'o-lluch')%>
 
 ## Working with us
 
-To engage with the GitLab Dedicated team:
+To engage with the GitLab Dedicated teams:
 
 * [Create an issue](https://gitlab.com/gitlab-com/gl-infra/gitlab-dedicated/team/-/issues/new) in the GitLab Dedicated team issue tracker (**Note** The issue tracker will be made public after [work in epic 33 "Considerations for making Dedicated projects public"](https://gitlab.com/groups/gitlab-com/gl-infra/gitlab-dedicated/-/epics/33) is completed)
   * For feature requests, use the [feature_requests issue template](https://gitlab.com/gitlab-com/gl-infra/gitlab-dedicated/team/-/blob/main/.gitlab/issue_templates/feature_request.md) and fill in the required information
 * When creating an issue, it is not necessary to `@`mention anyone
-* In case you want to mention the whole team, use `@gitlab-dedicated` handle on GitLab.com
+* In case you want to get attention, use a specific team handle as defined in [group hierarchy below](#gitlab-group-hierarchy)
 * Slack channels
   * For GitLab Dedicated specific questions, you can find us in [#f_gitlab_dedicated](https://gitlab.slack.com/archives/C01S0QNSYJ2)
-  * Engineering team has its own [work channel](https://gitlab.slack.com/archives/C025LECQY0M) for team work discussions, and a [social channel](https://gitlab.slack.com/archives/C03QBGQ3K5W) for social interactions
+  * Engineering teams have their own work channels for team work discussions:
+      * [#g_dedicated-team](https://gitlab.slack.com/archives/C025LECQY0M)
+      * [#g_dedicated-switchboard-team](https://gitlab.slack.com/archives/C04DG7DR1LG)
+      * [#g_dedicated-us-pubsec](https://gitlab.slack.com/archives/C03R5837WCV)
+  * Our [social channel](https://gitlab.slack.com/archives/C03QBGQ3K5W) is accessible to everyone who wants to casually interact with the team
 
 ### Handling Configuration Changes for Tenant Environments
 
