--- a/infrastructure/team/gitlab-dedicated/index.html.md.erb
+++ b/infrastructure/team/gitlab-dedicated/index.html.md.erb
@@ -104,6 +104,24 @@ The outcome of the call is shared in a persistent location (Slack is not persist
 
 `1*` Exceptions to the recording rule are: 1-1 calls, discussions around non-project work, and in cases where parties do not feel comfortable with recording. However, even with the exceptions, outcome of project related discussions need to be logged in a persistent location, such as the main issue tracker.
 
+### GitLab Group Hierarchy
+
+We use [GitLab Groups](https://docs.gitlab.com/ee/user/group/#groups) to logically organize team-members working on GitLab Dedicated projects.
+The groups cover the following use-cases:
+
+1. GitLab Dedicated group membership: `@gitlab-dedicated`
+    * All permanent team-members in any of the GitLab Dedicated teams should gain access to this GitLab group as part of onboarding
+    * Group mention should only be used in circumstances where the information shared is pertinent for all team members of GitLab Dedicated group
+1. Individual team group membership: `@gitlab-dedicated/environment-automation`, `@gitlab-dedicated/switchboard`, `@gitlab-dedicated/uspubsec`, etc.
+    * All permanent team-members of individual teams should gain access to their respective GitLab group as part of onboarding
+    * Group mention should be used when the information shared is pertinent to the respective team
+1. Individual team GitLab groups have two additional subgroups `maintainers` and `reviewers`, e.g.: `@gitlab-dedicated/switchboard/maintainers`
+    * `reviewers` GitLab group access is granted to permanent team-members, external contractors, team-members on borrows and similar. This GitLab group type is used to distinguish users without merge rights. Initial reviewes should be requested from this group, using the quick action, e.g. `/assign_reviewer @gitlab-dedicated/switchboard/reviewers`
+    * `maintainers` GitLab group is granted to permantent team-members only. This group has merge rights, and the group is granted access through [CODEOWNERS approval rules](https://docs.gitlab.com/ee/user/project/code_owners.html#code-owners)
+
+
+Do note that the transition between `reviewers` and `maintainers` groups is still not fully defined, and this will be deifined as the team continues to grow. Currently, the founding team-members with a significant early contribution to the specific codebase and specific topic knowledge have been granted `maintainers` rights.
+
 ### Project Management
 
 We use epics, issues, and issue/epic boards to organize our work, as they complement each other.
