Update Plan Retrospective process to include documentation on using Internal...

--- a/development/dev/plan/index.html.md.erb
+++ b/development/dev/plan/index.html.md.erb
@@ -168,9 +168,11 @@ We feel it is important to document and communicate, that changing of any item's
 
 ### Retrospectives
 
-The Plan stage conducts [monthly retrospectives asynchronously using GitLab
-issues][retros]. These are confidential during the initial discussion,
-then made public once concluded.
+The Plan stage conducts [monthly retrospectives asynchronously using GitLab issues][retros]. Monthly retrospectives are performed in a Confidential Issue made Public upon Close. Confidentiality of these Issues while Open aligns with [GitLab SAFE Framework](https://about.gitlab.com/handbook/legal/safe-framework/). 
+
+The Plan Stage team encourages the use of Internal Notes as well to further adhere to SAFE Guidelines. Internal notes remain confidential to participants of the retrospective even after the issue is made public, including Guest users of the parent group. Dogfooding this feature aligns with an FY23 Q4 OKR of improving the GitLab Product development flow by driving the adoption of Plan features.
+
+Examples of information that should remain Confidential per SAFE guidelines are any company confidential information that is not public, any data that reveals information not generally known or not available externally which may be considered sensitive information, and material non-public information.
 
 The retrospective issue is created by a scheduled pipeline in the
 [async-retrospectives] project. It is then updated once the milestone
@@ -212,6 +214,8 @@ The DRI is responsible for completing the following actions:
 
 [async-retrospectives]: https://gitlab.com/gitlab-org/async-retrospectives
 [retros]: https://gitlab.com/gl-retrospectives/plan/issues?scope=all&utf8=%E2%9C%93&state=all&label_name[]=retrospective
+
+In both the summary comment and video the DRI should be particularly careful to ensure all information disclosed is [SAFE](https://about.gitlab.com/handbook/legal/safe-framework/). If the retrospective discussion contains examples of unSAFE information, the issue should not be made public.
 
 ### Meetings
 
