Fix a broken link to Oncall team member list

--- a/development/processes/Infra-Dev-Escalation/process.html.md.erb
+++ b/development/processes/Infra-Dev-Escalation/process.html.md.erb
@@ -189,7 +189,7 @@ The on-call spreadsheet(internal only) can be found by searching [Google Drive f
      * At this point we would only be looking into countries where 1) we have legal entities, as those team members are employees or 2) countries where team members are hired as employees through one of our PEO providers. For everyone else, team members are contracted as independent contractors so general employment law would not apply.
    * Team members participating in another on-call rotation. Examples of this include a team specific rotation for a service owned by that team or in the [Engineering Incident Manager rotation](/handbook/on-call/#engineering-incident-manager).
 
-   The eligibility is maintained in this [team members list(internal only)(https://drive.google.com/drive/search?q=%22Development-Team-BE%22)] and the spreadsheet is refreshed automatically by our [automation script](https://gitlab.com/gitlab-com/people-group/peopleops-eng/employment-automation/-/blob/main/lib/syncing/on_call_scheduling_spreadsheet.rb). 
+   The eligibility is maintained in this [team members list(internal only)](https://drive.google.com/drive/search?q=%22Development-Team-BE%22) and the spreadsheet is refreshed automatically by our [automation script](https://gitlab.com/gitlab-com/people-group/peopleops-eng/employment-automation/-/blob/main/lib/syncing/on_call_scheduling_spreadsheet.rb). 
 
 #### Nomination
 
