Update link to previous OKRs for Product division

--- a/product/product-okrs/index.html.md.erb
+++ b/product/product-okrs/index.html.md.erb
@@ -62,15 +62,19 @@ This section will be updated by Product Operations quarterly.
 
 #### Past Quarters
 
-- [Product OKRs FY23-Q3](https://app.ally.io/teams/39480/objectives?tab=0&time_period_id=155987&viewId=208941)
-- [Product OKRs FY23-Q2](https://app.ally.io/teams/39480/objectives?tab=0&time_period_id=155987&viewId=209034)
-- [Product OKRs FY23-Q1](https://app.ally.io/teams/39480/objectives?tab=0&time_period_id=155985&viewId=209034)
-- [Product OKRs FY22-Q4](https://app.ally.io/teams/39480/objectives?tab=0&time_period_id=155986&viewId=4675885)
-- [Product OKRs FY22-Q3](https://app.ally.io/teams/39480/objectives?tab=0&time_period_id=155986&viewId=4707997)
-- [Product OKRs FY22-Q2](https://gitlab.com/gitlab-com/Product/-/issues/2376)
-- [Product OKRs FY22-Q1](https://gitlab.com/gitlab-com/Product/-/issues/1914)
-- [Product OKRs FY21-Q4](https://gitlab.com/gitlab-com/Product/-/issues/1566)
-- [Product OKRs FY21-Q3](https://gitlab.com/gitlab-com/Product/-/issues/1320)
+Product Division (PM and UX) OKRs for the following quarters can be found in this [sheet](https://docs.google.com/spreadsheets/d/1eDbadMdoXDnyUK_Homr-ilCQSsaeOGDsflc8FNmMyGs/edit#gid=622042351) as Ally.io usage is has been sunsetted:
+
+- FY23 Q3
+- FY23 Q2
+- FY23 Q1
+- FY22 Q4
+- FY22 Q3
+
+- [Product OKRs FY22 Q2](https://gitlab.com/gitlab-com/Product/-/issues/2376)
+- [Product OKRs FY22 Q1](https://gitlab.com/gitlab-com/Product/-/issues/1914)
+- [Product OKRs FY21 Q4](https://gitlab.com/gitlab-com/Product/-/issues/1566)
+- [Product OKRs FY21 Q3](https://gitlab.com/gitlab-com/Product/-/issues/1320)
+
 
 ## Updating the Status and Progress of OKRs 
 
