add new datastores-postgres page

--- a/infrastructure/team/reliability/index.html.md.erb
+++ b/infrastructure/team/reliability/index.html.md.erb
@@ -85,10 +85,8 @@ We maintain a single source of truth epic for all work underway for the Reliabil
     * [Security Patching](https://gitlab.com/gitlab-com/gl-infra/production/-/issues/6605)
     * [General Requests from the backlog](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/592) that DO NOT require a dedicated project squad.
      
-##### Database Reliability Squad
-This squad is comprised of DBREs and one or two SREs to support their learning to implement DB related infra changes.
-
- * Build, maintain, and improve database services.
+##### [Datastores::Postgres Team](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/datastores-postgres.html)
+The Datastores::Postgres Team is responsible for the PostgreSQL databases underpinning many of GitLab's services, as well as a range of related systems which help to ensure the availability and reliability of these databases. 
 
 ##### Standing Squad Membership Duration
   * Minimum of 2 quarters 
